--- a/css/mobi_main.css
+++ b/css/mobi_main.css
@@ -20,7 +20,9 @@ html {
 body {
 	height:100%;
 }
-
+#cont_wrapper {
+	display: none;
+}
 a:link, a:visited {
 	text-decoration: none; 
 	color: #03a9f4;
