--- a/css/mobi_main.css
+++ b/css/mobi_main.css
@@ -1,13 +1,4 @@
-﻿* {
-	color:#373737;
-	font-family:Arial;
-}
-a:link, a:visited {
-	text-decoration: none; 
-	color: #03a9f4;
-}
-
-/*顶栏*/
+﻿/*顶栏*/
 	#top_box, #top_box_top{
 		position:fixed;
 		top:0;
