--- a/css/normalize.css
+++ b/css/normalize.css
@@ -5,6 +5,12 @@ html, body, div, iframe, ul, ol, dl, dt, dd, li, dl, h1, h2, h3, h4, table, th, 
 html, body {
     height: 100%;
     background-color:#E4E4E4;
+	color:#373737;
+	font-family:Arial;
+}
+a:link, a:visited {
+	text-decoration: none; 
+	color: #03a9f4;
 }
 #error {
     height: 99%;
