--- a/css/prism.css
+++ b/css/prism.css
@@ -7,8 +7,9 @@
 
 code[class*="language-"],
 pre[class*="language-"] {
+	z-index: 1;
 	color: black;
-	background: none;
+	background: #fff;
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	direction: ltr;
 	text-align: left;
@@ -36,9 +37,6 @@ pre[class*="language-"] {
 	-moz-box-shadow: -1px 0px 0px 0px #358ccb, 0px 0px 0px 1px #dfdfdf;
 	box-shadow: -1px 0px 0px 0px #358ccb, 0px 0px 0px 1px #dfdfdf;
 	border-left: 10px solid #358ccb;
-	background-color: #fdfdfd;
-	background-size: 3em 3em;
-	background-origin: content-box;
 	overflow: visible;
 	padding: 0;
 }
@@ -79,7 +77,6 @@ pre[class*="language-"] {
 pre[class*="language-"]:before,
 pre[class*="language-"]:after {
 	content: '';
-	z-index: -2;
 	display: block;
 	position: absolute;
 	bottom: 0.75em;
@@ -293,7 +290,7 @@ div.prism-show-language > div.prism-show-language-label {
 	border-radius: 0 0 0 5px;
 	padding: 0 0.5em;
 	text-shadow: none;
-	z-index: 1;
+	z-index: 2;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
