--- a/css/mobi_article.css
+++ b/css/mobi_article.css
@@ -8,7 +8,7 @@
 #content_box .chapter {/*章节*/
 	margin:15px auto;
 	padding:16px 16px;
-	box-shadow:0px 2px 5px 0px #555;
+	box-shadow:0 2px 5px 0 #555;
 	background-color:#FFF;
 	border-radius:2px;
 }
@@ -34,7 +34,6 @@
 #content_box .saimg {
 	display:block;
 	margin:6px 0 10px 0;
-	max-width:99%;
 	max-width:calc(100% - 2px);
 	cursor:pointer;
 	border:solid 1px;
@@ -70,7 +69,7 @@
 	margin:15px auto;
 	width:90%;
 	padding:10px 0;
-	box-shadow:0px 2px 5px 0px #555;
+	box-shadow:0 2px 5px 0 #555;
 	background-color:#FFF;
 	border-radius:2px;
 }
