--- a/css/mobi_main.css
+++ b/css/mobi_main.css
@@ -6,7 +6,7 @@
 		height:46px;
 		background-color:#259b24;
 		z-index:5;
-		box-shadow:0px 0px 6px 1px #000; 
+		box-shadow:0 0 6px 1px #000;
 	}
 
 	#top_box_top {/*顶栏 遮罩层*/
@@ -155,7 +155,7 @@
 	#nav .children {
 		transition: height 0.3s;
 		overflow: hidden;
-		height: 0px;
+		height: 0;
 	}
 	#nav .parent:hover, #nav .child:hover {
 		background: #eee;
