--- a/css/normalize.css
+++ b/css/normalize.css
@@ -6,7 +6,7 @@ html, body {
     height: 100%;
     background-color:#E4E4E4;
 	color:#373737;
-	font-family:Arial;
+    font-family: Arial, sans-serif;
 }
 a:link, a:visited {
 	text-decoration: none; 
