展开导航栏后禁止滚动页面 & 点击其他位置关闭导航栏
取消PC端overflow: hidden阻止滚动的方法（会隐藏正文滚动条，导致展开导航栏时页面变宽）
取消旧的在nav_overlay绑定click事件关闭导航栏的方法（看着太low）

加入触摸判断，完善移动端阻止滚动的方法（并不完善——nav滚动会冒泡给body，即便限制了nav到底/顶时禁止滚动，由于滚动事件cancelable为false，body依然会按惯性滚动。所以索性设置展开导航栏后触屏滑动时body的overflow-y
= hidden，然而这一属性至少在android uc是不生效的…………………………）

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
-﻿/*顶栏*/
+﻿.lock_position {
+	height: 100%;
+	overflow-y: hidden;
+}
+
+/*顶栏*/
 	#top_box, #top_box_top{
 		position:fixed;
 		top:0;
