--- a/css/article.css
+++ b/css/article.css
@@ -34,6 +34,7 @@
 .saimg {
 	display:block;
 	margin:8px 0 12px 0;
+	max-width: 97%;
 	max-width:calc(100% - 8px);
 	max-height: 700px;
 	border:solid 1px #ccc;
@@ -60,13 +61,6 @@
 	left: 50%;
 	cursor: move;
 	transition: width 0.3s ease-out, margin 0.5s ease;
-}
-#mag_close_btn {
-	position: fixed;
-	top: 30px;
-	right: 30px;
-	z-index: 999;
-	cursor: pointer;
 }
 
 #content_box li {
