--- a/css/mobi_article.css
+++ b/css/mobi_article.css
@@ -34,7 +34,8 @@
 .saimg {
 	display:block;
 	margin:6px 0 10px 0;
-	max-width:calc(100% - 8px);
+	max-width: 97%;
+	max-width: calc(100% - 8px);
 	max-height: 500px;
 	border:solid 1px #ccc;
 	box-shadow: 5px 6px 8px -4px #aaa;
@@ -59,14 +60,6 @@
 	top: 50%;
 	left: 50%;
 	cursor: move;
-	transition: width 0.3s ease-out, margin 0.4s linear;
-}
-#mag_close_btn {
-	position: fixed;
-	top: 30px;
-	right: 30px;
-	z-index: 999;
-	cursor: pointer;
 }
 
 #content_box li {
