新增表格折叠功能

--- a/css/article.css
+++ b/css/article.css
@@ -121,3 +121,11 @@
 .fade_in {
 	opacity: 1 !important;
 }
+
+.fold_btn {
+	position: absolute;
+	right: 3px;
+	cursor: pointer;
+	margin-top: -10px;
+	top: 50%;
+}
