--- a/css/mobi_article.css
+++ b/css/mobi_article.css
@@ -116,3 +116,11 @@
 .break_word {
 	word-break:break-all;
 }
+
+.fold_btn {
+	position: absolute;
+	right: 3px;
+	cursor: pointer;
+	margin-top: -10px;
+	top: 50%;
+}
