--- a/css/mobi_main.css
+++ b/css/mobi_main.css
@@ -50,9 +50,12 @@
 /*按钮*/
 	#buttons #menu_btn, #buttons #nav_btn {
 		position:fixed;
-		width: 25px;
 		z-index:7;
-		top:10.5px;
+		top:12px;
+	}
+	
+	#menu_btn img, #nav_btn img {
+		width: 22px;
 	}
 
 	#buttons #menu_btn {
