移动端按钮md

--- a/css/mobi_main.css
+++ b/css/mobi_main.css
@@ -54,24 +54,46 @@ body {
 	}
 
 /*按钮*/
-	#buttons #menu_btn, #buttons #nav_btn {
+	#menu_btn, #nav_btn {
 		position:fixed;
+		width: 36px;
+		height: 36px;
 		z-index:7;
-		top:12px;
+		top:5px;
+		border-radius: 50%;
 	}
-	
-	#menu_btn img, #nav_btn img {
+
+	#buttons img {
+		position: absolute;
+		margin: -11px 0 0 -11px;
+		left: 50%;
+		top: 50%;
 		width: 22px;
 	}
 
-	#buttons #menu_btn {
-		right:7.5px;
+	#menu_btn {
+		right:5px;
 	}
 
-	#buttons #nav_btn {
-		left:7.5px;
+	#nav_btn {
+		left:5px;
 	}
 
+	.md_btn {
+		overflow: hidden;
+	}
+
+	.md_bg {
+		width: 1px;
+		height: 1px;
+		box-shadow: 0 0 0 0 #000;
+		border-radius: 50%;
+		position: absolute;
+		background: #000;
+		opacity: 0.3;
+		transition: all 0.25s ease-out, opacity 0.14s ease-out;
+		-webkit-transition: all 0.25s ease-out, opacity 0.14s ease-out;
+	}
 /*目录*/
 	#menu {/*菜单 文字内容*/
 		z-index:9;
@@ -158,7 +180,8 @@ body {
 		line-height: 35px;
 		padding-left: 30px;
 		font-size: 15px;
-		transition: background 0.08s linear, color 0.08s linear;
+		position: relative;
+		color: #03a9f4;
 	}
 	#nav .children {
 		transition: height 0.3s;
@@ -167,9 +190,6 @@ body {
 	}
 	#nav .parent:hover, #nav .child:hover {
 		background: #eee;
-	}
-	#nav .parent:active, #nav .child:active {
-		background: #ddd;
 	}
 
 /*动画*/
