--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
 	opacity: 0;
 	transition: opacity 0.25s ease-in-out;
 	-webkit-transition: opacity 0.25s ease-in-out;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 hr {
