--- a/css/mobi_main.css
+++ b/css/mobi_main.css
@@ -93,10 +93,16 @@ hr {
 
 	#menu_btn {
 		right:5px;
+		background: url(../image/menu_btn.svg);
+		background-repeat: no-repeat;
+		background-position: center;
 	}
 
 	#nav_btn {
 		left:5px;
+		background: url(../image/nav_btn.svg);
+		background-repeat: no-repeat;
+		background-position: center;
 	}
 
 	.md_btn {
