--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ hr {
 
 	#top_box_top {/*顶栏 遮罩层*/
 		z-index:5;
-		box-shadow:0 0 0 0;
+		box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 		position:absolute;
 		height:260px;
 	}
@@ -177,6 +177,7 @@ hr {
 		height:100%;
 		width:260px;
 		background-color:#FFF;
+		box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 		overflow-x:hidden;
 		overflow-y:auto;
 		transition: transform 0.5s;
