--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ hr {
 		height:60px;
 		background-color:#259b24;
 		z-index:5;
-		box-shadow:0 0 6px 1px #000;
+		box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 	}
 
 	#top_box_top {/*顶栏 遮罩层*/
@@ -177,7 +177,7 @@ hr {
 		height:100%;
 		width:260px;
 		background-color:#FFF;
-		box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+		box-shadow: 2px 0px 4px -1px rgba(0,0,0,.2), 4px 0px 5px 0 rgba(0,0,0,.14), 1px 0px 10px 0 rgba(0,0,0,.12);
 		overflow-x:hidden;
 		overflow-y:auto;
 		transition: transform 0.5s;
