--- a/css/main.css
+++ b/css/main.css
@@ -40,12 +40,12 @@ hr {
 		height:60px;
 		background-color:#259b24;
 		z-index:5;
-		box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+		box-shadow: 0 -8px 4px 9px rgba(0,0,0,.2), 0 -6px 5px 10px rgba(0,0,0,.14), 0 -9px 10px 10px rgba(0,0,0,.12);
 	}
 
 	#top_box_top {/*顶栏 遮罩层*/
 		z-index:5;
-		box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+		box-shadow: 0 -8px 4px 9px rgba(0,0,0,.2), 0 -6px 5px 10px rgba(0,0,0,.14), 0 -9px 10px 10px rgba(0,0,0,.12);
 		position:absolute;
 		height:260px;
 	}
